Some minor aesthetic changes: - changed fonts to Roboto Light (title) and Open Sans (the rest) - changed layout to horizontal also on desktop - fixed #2 - now vertical photos are fully visible - other minor changes

--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,10 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
 .app-title {
     margin-bottom: 20px;
+    font-family: 'Roboto Light', sans-serif;
 }
 
 .text-centered {
@@ -10,6 +15,7 @@
     width: 100%;
     padding-bottom: 66.66%;
     position: relative;
+    margin-bottom: 20px;
 }
 
 .drag-and-drop-area {
@@ -37,13 +43,26 @@
     clear: both;
 }
 
+.score-bar, #score-bar {
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+}
+
 .progress-bar {
     width: 0;
     transition: width 2s ease;
 }
 
+.photo-area {
+    text-align: center;
+}
+
 .photo-thumbnail {
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    max-height: 70vh;
     margin-bottom: 20px;
 }
 
